# Framework

./: .clang-format  .clang-tidy  .clangd  .gitignore  1  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  debug_build_and_test.sh  release_build_and_test.sh  ž
.github/workflows/: cmake-tests.yaml
docs/doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_000001_000003.html  dir_000004_000003.html  dir_000006_000001.html  dir_000007_000003.html  dir_000008_000003.html  dir_000009_000003.html  dir_000010_000003.html  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9.html  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9.js  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9_dep.map  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9_dep.md5  dir_4e3b6e71b06f15e3d11e049420df5083.html  dir_4e3b6e71b06f15e3d11e049420df5083.js  dir_838627738e547783d4603121a4ba4cac.html  dir_838627738e547783d4603121a4ba4cac.js  dir_838627738e547783d4603121a4ba4cac_dep.map  dir_8ccf5307d18d5ecbd4aa29be47619e03.html  dir_8ccf5307d18d5ecbd4aa29be47619e03.js  dir_8ccf5307d18d5ecbd4aa29be47619e03_dep.map  dir_9baea58fd46606b034aa83111230734e.html  dir_9baea58fd46606b034aa83111230734e.js  dir_9f43e59590c759679b138df8b7d7f4ba.html  dir_9f43e59590c759679b138df8b7d7f4ba.js  dir_9f43e59590c759679b138df8b7d7f4ba_dep.map  dir_a238549e71e2e91523e8086c3fe9583d.html  dir_a238549e71e2e91523e8086c3fe9583d.js  dir_a238549e71e2e91523e8086c3fe9583d_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d6279157da222cf487899a8bd65e6335.html  dir_d6279157da222cf487899a8bd65e6335.js  dir_d6279157da222cf487899a8bd65e6335_dep.map  dir_d6279157da222cf487899a8bd65e6335_dep.md5  dir_ec499bfe2ce256c0e11e9d8cd4984d5e.html  dir_ec499bfe2ce256c0e11e9d8cd4984d5e.js  dir_ec499bfe2ce256c0e11e9d8cd4984d5e_dep.map  dir_ec499bfe2ce256c0e11e9d8cd4984d5e_dep.md5  (+26 more)
docs/doxygen/html/d0/d45/: _disjoint_set_8hpp.html  _disjoint_set_8hpp.js  _disjoint_set_8hpp_source.html
docs/doxygen/html/d0/d80/: _extended_integer_8hpp__incl.map  _extended_integer_8hpp__incl.md5
docs/doxygen/html/d0/d8d/: namespacemaf_1_1util.html  namespacemaf_1_1util.js
docs/doxygen/html/d0/d8e/: _eigen_8hpp.html  _eigen_8hpp_source.html
docs/doxygen/html/d0/dbe/: _modular_arithmetic_8hpp.html  _modular_arithmetic_8hpp.js  _modular_arithmetic_8hpp_source.html
docs/doxygen/html/d1/d57/: _global_header_8hpp__incl.map  _global_header_8hpp__incl.md5
docs/doxygen/html/d1/df7/: _global_header_8hpp.html  _global_header_8hpp.js  _global_header_8hpp_source.html
docs/doxygen/html/d2/d09/: _matrix_checkers_8hpp.html  _matrix_checkers_8hpp_source.html
docs/doxygen/html/d2/d0e/: _finance_c_s_v_parser_8hpp.html  _finance_c_s_v_parser_8hpp_source.html
docs/doxygen/html/d2/d78/: _cholesky_decomposition_8hpp__incl.map  _cholesky_decomposition_8hpp__incl.md5
docs/doxygen/html/d2/d7b/: _matrix_8hpp__dep__incl.map  _matrix_8hpp__dep__incl.md5
docs/doxygen/html/d2/d80/: class_a_v_l_tree.html
docs/doxygen/html/d2/d89/: bit__twiddling_8hpp.html  bit__twiddling_8hpp.js  bit__twiddling_8hpp_source.html
docs/doxygen/html/d2/d9b/: _random_vars_8h__incl.map  _random_vars_8h__incl.md5
docs/doxygen/html/d2/da4/: class_extended_int.html  class_extended_int.js  class_extended_int_a0b0b15af5202fd43f29d641f1ab63b23_icgraph.map  class_extended_int_a17d38c5c12427866a6e770a6442510a0_cgraph.map  class_extended_int_a17d38c5c12427866a6e770a6442510a0_icgraph.map  (+13 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  files_7.js  files_9.js  files_d.js  functions_0.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  (+17 more)
docs/doxygen/latex/: annotated.tex  dir_1dcbc4fa9e8295f7961cf86cef3ffbb9.tex  dir_4e3b6e71b06f15e3d11e049420df5083.tex  dir_838627738e547783d4603121a4ba4cac.tex  dir_838627738e547783d4603121a4ba4cac_dep.md5  dir_8ccf5307d18d5ecbd4aa29be47619e03.tex  dir_8ccf5307d18d5ecbd4aa29be47619e03_dep.md5  dir_9baea58fd46606b034aa83111230734e.tex  dir_9f43e59590c759679b138df8b7d7f4ba.tex  dir_9f43e59590c759679b138df8b7d7f4ba_dep.md5  dir_a238549e71e2e91523e8086c3fe9583d.tex  dir_a238549e71e2e91523e8086c3fe9583d_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d6279157da222cf487899a8bd65e6335.tex  dir_ec499bfe2ce256c0e11e9d8cd4984d5e.tex  dir_f47d0c28b4189d4e9f5e06b8cb9b7412.tex  dirs.tex  files.tex  namespaces.tex  refman.tex
examples/: CMakeLists.txt
include/MafLib/main/: GlobalHeader.hpp
include/MafLib/math/: ExtendedInteger.hpp  Math.hpp
include/MafLib/math/linalg/: Cholesky.hpp  CholeskyDecomposition.hpp  Containers.hpp  LinAlg.hpp  Matrix.hpp  MatrixCheckers.hpp  MatrixConstructors.hpp  MatrixFactories.hpp  MatrixMethods.hpp  MatrixOperators.hpp  PLU.hpp  QR.hpp  Vector.hpp  VectorCheckers.hpp  VectorConstructors.hpp  VectorMethods.hpp  VectorOperators.hpp
include/MafLib/math/polynomial/: Polynomial.hpp  PolynomialConstructors.hpp
include/MafLib/math/stochastic/: RandomVars.h  Statistics.h
include/MafLib/structs/: DisjointSet.hpp
include/MafLib/structs/strings/: Trie.hpp
include/MafLib/structs/trees/: AVL.hpp  BTree.hpp  BinaryTree.hpp
include/MafLib/structures/trees/: AVL.hpp
include/MafLib/utility/: Bits.hpp  ModularArithmetic.hpp  UtilMath.hpp  bit_twiddling.hpp
main/: GlobalHeader.hpp
math/: ExtendedInteger.hpp
math/linalg/: CholeskyDecomposition.hpp  Containers.hpp  ExtendedNaturalNumbers.hpp  Norms.hpp  test.cpp  test1.cpp
math/stochastic/: RandomVars.h  Statistics.h
tests/: CMakeLists.txt  ITest.hpp  MathTests.cpp  linalg.cpp  tests.cpp
tests/math/: CMakeLists.txt  LinAlgTest.cpp  LinAlgTests.cpp  MatrixTests.cpp  VectorTests.cpp
tests/structs/: CMakeLists.txt  DisjointSetTest.cpp  TrieTest.cpp
utility/: bit_twiddling.hpp  test.cpp
(+456 files in other folders)
